// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostView > renders correctly 1`] = `
"<div class="mx-auto max-w-180 px-8 pt-35 pb-24"><a href="/posts" class="group text-fg-muted hover:text-accent mb-12 inline-flex items-center gap-1.5 font-mono text-[0.75rem] tracking-[0.02em] no-underline transition-colors"><svg width="14" height="14" viewBox="0 0 14 14" fill="none" class="transition-transform group-hover:-translate-x-1">
      <path d="M9 2L4 7L9 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
    </svg> back to blog </a>
  <div class="mb-6 flex flex-wrap items-center gap-4"><span class="text-accent bg-accent-dim rounded-xs px-2.5 py-1 font-mono text-[0.65rem] font-semibold tracking-[0.08em] uppercase">development</span><span class="text-fg-subtle font-mono text-[0.72rem]">December 31, 2024</span><span class="text-fg-subtle font-mono text-[0.72rem]"> · 5 min read </span></div>
  <h1 class="mb-6 font-mono leading-[1.2] font-bold" style="letter-spacing: -0.04em;">First Post</h1>
  <p class="text-fg-muted border-accent mb-8 border-l-2 pl-5 text-[1.1rem] leading-[1.7]">The first post description.</p>
  <div class="border-line mb-12 flex items-center gap-4 border-t border-b py-5">
    <div class="bg-accent-dim border-accent h-10 w-10 shrink-0 overflow-hidden rounded-full border-2"><img src="/images/photo.jpg" alt="Dan Holloran" class="h-full w-full object-cover"></div>
    <div class="flex-1">
      <div class="font-mono text-[0.8rem] font-semibold">Dan Holloran</div>
      <div class="text-fg-subtle font-mono text-[0.7rem]">Senior Frontend Developer</div>
    </div>
  </div>
  <div class="mb-12 aspect-video w-full overflow-hidden rounded bg-[#e8e6e1]"><img src="/images/posts/first-post.jpg" class="h-full w-full" alt="First Post image"></div>
  <article class="post-body text-fg text-base leading-[1.85]"></article>
  <div class="border-line mt-12 flex flex-wrap gap-2 border-t pt-8"><span class="text-fg-muted border-line rounded-xs border px-2.5 py-1 font-mono text-[0.7rem] no-underline transition-colors">javascript</span></div>
  <nav class="border-line mt-16 grid grid-cols-2 gap-4 border-t pt-8 max-md:grid-cols-1"><a href="/posts/second-post" class="border-line hover:border-accent rounded border p-5 no-underline transition-colors">
      <div class="text-fg-subtle mb-1.5 font-mono text-[0.65rem] tracking-[0.08em] uppercase"> ← Previous </div>
      <div class="text-fg font-mono text-[0.85rem] leading-[1.3] font-semibold">Second Post</div>
    </a>
    <!--v-if-->
  </nav>
</div>"
`;

exports[`PostView > renders with prev and next navigation when post is mid-list 1`] = `
"<div class="mx-auto max-w-180 px-8 pt-35 pb-24"><a href="/posts" class="group text-fg-muted hover:text-accent mb-12 inline-flex items-center gap-1.5 font-mono text-[0.75rem] tracking-[0.02em] no-underline transition-colors"><svg width="14" height="14" viewBox="0 0 14 14" fill="none" class="transition-transform group-hover:-translate-x-1">
      <path d="M9 2L4 7L9 12" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
    </svg> back to blog </a>
  <div class="mb-6 flex flex-wrap items-center gap-4"><span class="text-accent bg-accent-dim rounded-xs px-2.5 py-1 font-mono text-[0.65rem] font-semibold tracking-[0.08em] uppercase">career</span><span class="text-fg-subtle font-mono text-[0.72rem]">January 31, 2025</span><span class="text-fg-subtle font-mono text-[0.72rem]"> · 3 min read </span></div>
  <h1 class="mb-6 font-mono leading-[1.2] font-bold" style="letter-spacing: -0.04em;">Second Post</h1>
  <p class="text-fg-muted border-accent mb-8 border-l-2 pl-5 text-[1.1rem] leading-[1.7]">The second post description.</p>
  <div class="border-line mb-12 flex items-center gap-4 border-t border-b py-5">
    <div class="bg-accent-dim border-accent h-10 w-10 shrink-0 overflow-hidden rounded-full border-2"><img src="/images/photo.jpg" alt="Dan Holloran" class="h-full w-full object-cover"></div>
    <div class="flex-1">
      <div class="font-mono text-[0.8rem] font-semibold">Dan Holloran</div>
      <div class="text-fg-subtle font-mono text-[0.7rem]">Senior Frontend Developer</div>
    </div>
  </div>
  <div class="mb-12 aspect-video w-full overflow-hidden rounded bg-[#e8e6e1]"><img src="/images/posts/second-post.jpg" class="h-full w-full" alt="Second Post image"></div>
  <article class="post-body text-fg text-base leading-[1.85]"></article>
  <div class="border-line mt-12 flex flex-wrap gap-2 border-t pt-8"><span class="text-fg-muted border-line rounded-xs border px-2.5 py-1 font-mono text-[0.7rem] no-underline transition-colors">career</span></div>
  <nav class="border-line mt-16 grid grid-cols-2 gap-4 border-t pt-8 max-md:grid-cols-1"><a href="/posts/third" class="border-line hover:border-accent rounded border p-5 no-underline transition-colors">
      <div class="text-fg-subtle mb-1.5 font-mono text-[0.65rem] tracking-[0.08em] uppercase"> ← Previous </div>
      <div class="text-fg font-mono text-[0.85rem] leading-[1.3] font-semibold">Third Post</div>
    </a><a href="/posts/first-post" class="border-line hover:border-accent rounded border p-5 text-right no-underline transition-colors">
      <div class="text-fg-subtle mb-1.5 font-mono text-[0.65rem] tracking-[0.08em] uppercase"> Next → </div>
      <div class="text-fg font-mono text-[0.85rem] leading-[1.3] font-semibold">First Post</div>
    </a></nav>
</div>"
`;
